--- a/Index.ipynb
+++ b/Index.ipynb
@@ -437,7 +437,7 @@
     }
    },
    "source": [
-    "# Week 4 Advanced Recurrent Architectures\n",
+    "# Week 4 Advanced Recurrent Architectures; Transfer Learning\n",
     "\n",
     "**Plan**\n",
     "\n",
@@ -469,30 +469,10 @@
     "- [Neural Programming](Neural_Programming.ipynb)\n",
     "- [Introduction to the LSTM](Intro_to_LSTM.ipynb)\n",
     "- [LSTM Overview](LSTM_Overview.ipynb)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Week 5 Transfer Learning; Natural Language Processing\n",
     "\n",
-    "**Plan**\n",
+    "\n",
     "\n",
     "We  present an extremely useful trick for leveraging the hard work that others have done.\n",
-    "\n",
-    "Next we try to develop intuition for what is occurring within a Neural Network.\n",
-    "\n",
-    "We will also introduce a powerful mechanism called Attention that has recently become quite popular and\n",
-    "important.\n",
-    "\n",
-    "**Plan**\n",
-    "We will make an initial pass on the topic of learning from text: Natural Language Processing.\n",
     "\n",
     "- [Transfer Learning](Transfer_Learning.ipynb)\n",
     "\n",
@@ -504,16 +484,7 @@
     "         - Creates a much smaller subset, using a different directory structure\n",
     "         - The above notebook uses this reorganized, smaller subset\n",
     "\n",
-    "    \n",
-    "**Interpretation**\n",
-    "- [Interpretation: preview](Interpretation_preview.ipynb)\n",
-    "\n",
-    "**Learning from text: Deep Learning for Natural Language Processing (NLP)**\n",
-    "- [Natural Language Processing Overview](NLP_Overview.ipynb)\n",
-    "    - [NLP from github (Colab)](https://colab.research.google.com/github/kenperry-public/ML_Fall_2021/blob/master/Keras_examples_imdb_cnn.ipynb)\n",
-    "    - [NLP from github (local machine)](Keras_examples_imdb_cnn.ipynb)\n",
-    "\n",
-    "**Further reading**\n",
+    "**Further reading** \n",
     "- [Sebastian Ruder: Transfer Learning](https://ruder.io/transfer-learning/)\n"
    ]
   },
@@ -525,16 +496,61 @@
     }
    },
    "source": [
-    "# Week 6 Attention\n",
+    "# Week 5 Attention; Transformers; Natural Language Processing\n",
+    "\n",
+    "**Plan**\n",
+    "\n",
+    "We introduce a powerful mechanism called Attention that has recently become quite popular and\n",
+    "important.\n",
+    "\n",
+    "We then introduce a very power layer architecture called the Transformer, which uses Attention.\n",
+    "\n",
+    "Next we try to develop intuition for what is occurring within a Neural Network.\n",
+    "\n",
+    "We will make an initial pass on the topic of learning from text: Natural Language Processing.\n",
+    "\n",
     "\n",
     "**Attention**\n",
     "- [Attention](Intro_to_Attention.ipynb)\n",
     "- [Implementing Attention](Attention_Lookup.ipynb)\n",
+    "   \n",
+    "**Transformers**\n",
+    "- [Transformer](Transformer.ipynb)\n",
+    "\n",
+    "**Learning from text: Deep Learning for Natural Language Processing (NLP)**\n",
+    "- [Natural Language Processing Overview](NLP_Overview.ipynb)\n",
+    "    - [NLP from github (Colab)](https://colab.research.google.com/github/kenperry-public/ML_Fall_2021/blob/master/Keras_examples_imdb_cnn.ipynb)\n",
+    "    - [NLP from github (local machine)](Keras_examples_imdb_cnn.ipynb)\n",
+    "\n",
+    "**Interpretation**\n",
+    "- [Interpretation: preview](Interpretation_preview.ipynb)\n",
+    "\n",
     "\n",
     "**Further reading**\n",
     "- Attention\n",
     "    - [Neural Machine Translation by Jointly Learning To Align and Translate](https://arxiv.org/pdf/1409.0473.pdf)\n",
-    "    - [Attention is all you need](https://arxiv.org/pdf/1706.03762.pdf)mm"
+    "    - [Attention is all you need](https://arxiv.org/pdf/1706.03762.pdf)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Week 6 NLP today\n",
+    "\n",
+    "**Evolution of Word representations**\n",
+    "- [How to represent a word: syntax](NLP_BPE.ipynb)\n",
+    "- [How to represent a word: meaning](NLP_Word_Representations.ipynb)\n",
+    "\n",
+    "**One model for all ? Task Agnostic architectures**\n",
+    "- [Recent advances](NLP_Recent.ipynb)\n",
+    "\n",
+    "**Learning to learn**\n",
+    "- [More than NLP: The GPT family](NLP_GPT.ipynb)"
    ]
   },
   {
@@ -546,12 +562,6 @@
    },
    "source": [
     "# Week 7 Advanced Topics\n",
-    "\n",
-    "**Continued from last week**\n",
-    "\n",
-    "**Attention**\n",
-    "- [Attention](Intro_to_Attention.ipynb)\n",
-    "- [Implementing Attention](Attention_Lookup.ipynb)\n",
     "\n",
     "**What is a Neural Network really doing ? Interpretation**\n",
     "- [Introduction to Interpretation of Deep Learning](Intro_to_Interpretation_of_DL.ipynb)\n",
