--- a/Intro_to_Attention.ipynb
+++ b/Intro_to_Attention.ipynb
@@ -540,6 +540,65 @@
     }
    },
    "source": [
+    "## Multi-head attention: two heads are better than one\n",
+    "\n",
+    "Remember: \n",
+    "- the output sequences are *vectors*\n",
+    "- we can stack layers so that the output sequence of layer $\\ll$ becomes the input sequence to layer $\\ll +1$\n",
+    "\n",
+    "\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <th><center>RNN Stacked layers</center></th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td><img src=\"images/RNN_layers_stacked.jpg\" width=80%></td>\n",
+    "    </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "- When generating two different elements (synthetic features) $j, j'$ of the layer $\\ll$ output vectors\n",
+    "- We may want to attend to different things\n",
+    "\n",
+    "So we often have *multiple* attention \"heads\", one devoted to each output feature.\n",
+    "\n",
+    "This is called *multi-head attention*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "A \"head\" is similar to the channel dimension of a CNN\n",
+    "- Each head (resp., channel) implements the same computation\n",
+    "- Using per-head (resp., per channel) weights\n",
+    "- Each computing a separate feature\n",
+    "\n",
+    "The representation (latent state) of layer $\\ll$ of the transformer\n",
+    "- Is the concatenation of the representations produced by each head\n",
+    "- So $n_\\text{head} > 1$ results in a larger latent state $n_\\text{head}$ larger than that of a single head"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "# Just for fun: Attention in action \n",
     "\n",
     "Here are some examples of Sequence to Sequence problems using Attention."
@@ -591,7 +650,7 @@
     "\n",
     "We have illustrated Attention in the context of the Decoder attending to an Encoder.\n",
     "\n",
-    "But Attention may be used to relate one element of a sequence to all other elements of the sequence.\n",
+    "But Attention may be used to relate one element of the *input* sequence to all other elements of the sequence.\n",
     "\n",
     "This is called *self-attention*"
    ]
@@ -647,13 +706,80 @@
     }
    },
    "source": [
+    "## Masked self-attention\n",
+    "\n",
+    "Self attention is applied to the *entire* input sequence to determine on which elements to focus.\n",
+    "\n",
+    "It is almost as if the sequence $\\x$ is treated as an *unordered* set.\n",
+    "\n",
+    "Sometimes order is important."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "For example, consider a generative model where\n",
+    "$$\\x_{(\\tt+1)} = \\y_\\tp$$\n",
+    "- That is: input element $(\\tt +1)$ is the $t^{th}$ output\n",
+    "- Can't attend to something that hasn't been generated yet !\n",
+    "- Causal ordering is important\n",
+    "\n",
+    "Other times, the fact that $\\x_\\tp$ precedes $\\x_{(\\tt+1)}$ is important."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The solution to both problems is to pair $\\x_\\tp$ with a *positional encoding* (of $\\tt$)\n",
+    "\n",
+    "To implement causal ordering for output $\\tt$\n",
+    "- mask out all $\\x_{(\\tt')}$ where $\\tt' > \\tt$\n",
+    "\n",
+    "This is called *masked self-attention*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The positional encoding can also be used in problem domains where relative order is important.\n",
+    "- The encoding is *non-trivial*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "## Transformers\n",
     "\n",
     "There is a new model (the Transformer) that processes sequences much faster than RNN's.\n",
     "\n",
-    "It's innovation is based on a clever use of Self-Attention.\n",
-    "\n",
-    "We will deal with this in a separate module."
+    "It is an Encoder/Decoder architecture that uses multiple forms of Attention\n",
+    "- Self Attention in the Encoder\n",
+    "    - to tell the Encoder the relevant parts of the input sequence $\\x$ to attend to\n",
+    "- Decoder/Encoder attention\n",
+    "    - to tell the Decoder which Encoder state $\\bar{\\h}_{(\\tt')}$ to attend to when outputting $\\y_\\tp$\n",
+    "- Masked Self-Attention in the Decoder\n",
+    "    - to prevent the Decoder from looking ahead into inputs that have not yet been generated\n",
+    "\n"
    ]
   },
   {
@@ -728,9 +854,14 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "369.594px"
+   },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
