--- a/NLP_BPE.ipynb
+++ b/NLP_BPE.ipynb
@@ -5,7 +5,7 @@
    "execution_count": 1,
    "metadata": {
     "slideshow": {
-     "slide_type": "notes"
+     "slide_type": "subslide"
     }
    },
    "outputs": [
@@ -118,8 +118,7 @@
     }
    ],
    "source": [
-    "%run Latex_macros.ipynb\n",
-    "%run beautify_plots.py"
+    "%run Latex_macros.ipynb"
    ]
   },
   {
@@ -130,89 +129,15 @@
     }
    },
    "source": [
-    "# The RNN API\n",
+    "# So many words !\n",
     "\n",
-    "Sequences present several complexities.\n",
+    "The size of the vocabulary $\\Vocab$ can easily be tens of thousands.\n",
     "\n",
-    "Let's begin by better understanding functions that have sequences as inputs and output.\n",
-    "\n",
-    "We call this the [RNN API](RNN_API.ipynb)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Inside an RNN layer\n",
-    "By now you hopefully have a good intuitive understanding of a Recurrent Layer, but lack the details\n",
-    "\n",
-    "Let's open up the hood and [go inside an RNN](RNN_Workings.ipynb)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# RNN in action\n",
-    "\n",
-    "A concrete example may help you to appreciate the power of an RNN.\n",
-    "\n",
-    "Let's see an [RNN in action](RNN_in_action.ipynb)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# What is *really* going on inside an RNN\n",
-    "\n",
-    "At this point\n",
-    "- You appreciate the ability of an RNN to operate on sequences\n",
-    "- Understand the mechanics of the internal workings\n",
-    "\n",
-    "But the update equations don't really convey an intuition about *how* the RNN achieves its power."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "Let's try to visualize the latent state of an RNN in order to get a better grasp.\n",
-    "\n",
-    "[RNN Visualization](RNN_Visualization.ipynb)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# RNN practicalities\n",
-    "\n",
-    "## Sequences: Variable length\n",
-    "\n",
-    "There are lots of small potholes one encounters with sequences.\n",
-    "\n",
-    "What if the examples of my training set have widely varying lengths ?"
+    "Not only are there many words, there are *variations* of each word\n",
+    "- verbs: past, present and future tense\n",
+    "- nouns: \n",
+    "    - singular, plural\n",
+    "    - gender agreement with subject"
    ]
   },
   {
@@ -223,32 +148,13 @@
     }
    },
    "source": [
-    "- Within a batch, short examples may behave differently than long examples:\n",
-    "    - Maybe learn less in short examples, noisier gradient updates\n",
-    "    \n",
-    "- Padding sequences to make them equal length\n",
-    "    - Pad at the start ? Or at the end ?\n",
-    "\n",
-    "The general advice is to arrange your data so that an epoch contains examples of similar lengths.\n",
-    "- You may require multiple fittings, one per length"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Issues with RNN's\n",
-    "\n",
-    "Although an RNN layer seems powerful (and a little magical) we have glossed over some big issues\n",
-    "- Can they handle *long* sequences or are they subject to \"forgetting\" ?\n",
-    "    - Short term versus long term memory trade offs\n",
-    "- Can we really unroll a computation over a long sequence ?\n",
-    "    - Gradient computation potentially more difficult in very deep graphs\n",
-    "- What are the practical difficulties in Keras with long sequences"
+    "\"Classical\" NLP has developed techniques to convert words to \"canonical\" form\n",
+    "- stemming: convert word to its root form (root may not be in dictionary)\n",
+    "    - drive, driver, driving $\\mapsto$ driv\n",
+    "- lemmatization: convert word to a root that is in dictionary\n",
+    "    - him: $\\mapsto$ he\n",
+    "    - took $\\mapsto$ take\n",
+    "    - earlier $\\mapsto$ early\n"
    ]
   },
   {
@@ -259,48 +165,95 @@
     }
    },
    "source": [
-    "These will be the topics of subsequent modules.\n",
-    "- Some topics require an in-depth understanding of Gradient Computation (still to come !)"
+    "So one way to reduce the vocabulary size is by using these techniques.\n",
+    "\n",
+    "There is still a place for this techniques in Deep Learning.\n",
+    "\n",
+    "- [spaCy](https://spacy.io/) is a very popular toolkit for dealing with text."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "source": [
-    "# Conclusion\n",
+    "It is also possible that\n",
+    "Embeddings will create a \"dimension\" that captures variations common to many words.\n",
+    "- the \"plural\" dimension\n",
     "\n",
-    "The Recurrent layer was yet another layer type that we have introduced in rapid succession.\n",
+    "But there is still an issue\n",
+    "- OOV: Out of Vocabulary\n",
     "\n",
-    "We chose to do this as a \"sprint\" rather than a \"marathon\" so that you can start coding and experimenting.\n",
-    "\n",
-    "Use the opportunity !  This is where the real learning will happen.\n",
-    "\n",
-    "Our next topics will be a more in-depth exploration of issues that may not have come into view during the sprint."
+    "No matter how big we make $\\Vocab$, there will still be words in use that are not found there."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done\n"
-     ]
-    }
-   ],
    "source": [
-    "print(\"Done\")"
+    "An elegant solution is *sub-word tokenization*\n",
+    "- break an OOV token into pieces, each of which is in-vocabulary\n",
+    "    - here's $\\mapsto$ here, \\', s\n",
+    "    - tokenizer $\\mapsto$ token, ##izer\n",
+    "\n",
+    "This encoding is referred to as Byte Piece Encoding."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Byte Pair Encoding is derived from techniques for data compression\n",
+    "- Replace long strings that frequently occur in a document with a short symbol\n",
+    "- Use a dictionary to map symbols to their associated strings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<table>\n",
+    "    <tr>\n",
+    "        <th><center>Universal model: adapting task-specific inputs</center></th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td><img src=\"http://twimgs.com/ddj/cuj/images/cuj9402gage/fig1.gif\" width=80%></td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td><center>Picture from: http://twimgs.com/ddj/cuj/images/cuj9402gage/fig1.gif\"</center></td>\n",
+    "    </tr>   \n",
+    "</table>\n",
+    "\n",
+    "- Pass 1: AB $\\mapsto$ H\n",
+    "- Pass 2: HC $\\mapsto$ G"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "BPE has become fairly common in modern NLP systems\n",
+    "- Balances brevity of character encoding\n",
+    "- With expressiveness of word encoding"
    ]
   }
  ],
@@ -332,14 +285,9 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {
-    "height": "calc(100% - 180px)",
-    "left": "10px",
-    "top": "150px",
-    "width": "370.594px"
-   },
+   "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
