--- a/RNN_API.ipynb
+++ b/RNN_API.ipynb
@@ -368,7 +368,7 @@
     "        <th><center>RNN Stacked layers</center></th>\n",
     "    </tr>\n",
     "    <tr>\n",
-    "        <td><img src=\"images/RNN_layers_stacked.jpg\" width=800></td>\n",
+    "        <td><img src=\"images/RNN_layers_stacked.jpg\" width=80%></td>\n",
     "    </tr>\n",
     "</table>\n",
     "​"
@@ -546,7 +546,7 @@
     "width": "370.594px"
    },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
