--- a/Training_Neural_Networks_Tweaks.ipynb
+++ b/Training_Neural_Networks_Tweaks.ipynb
@@ -439,7 +439,7 @@
     "- Image transformation\n",
     "    - rotate, crop, flip\n",
     "    \n",
-    "[Image Data Augmentation example](http://localhost:8888/notebooks/NYU/DataAugmentation/Data_augmentation.ipynb#Original-image)"
+    "[Image Data Augmentation example](DataAugmentation/Data_augmentation.ipynb#Original-image)"
    ]
   },
   {
