Lesson 12: VAE module added

--- a/Index.ipynb
+++ b/Index.ipynb
@@ -500,14 +500,13 @@
     "\n",
     "**Plan**\n",
     "\n",
-    "We introduce a powerful mechanism called Attention that has recently become quite popular and\n",
-    "important.\n",
-    "\n",
-    "We then introduce a very power layer architecture called the Transformer, which uses Attention.\n",
-    "\n",
-    "Next we try to develop intuition for what is occurring within a Neural Network.\n",
+    "We continue to introduce new layer types: the Transformer.\n",
+    "- It uses a mechanism called Attention, which increases the power of RNN's\n",
+    "- It is key to recent advances in Natural Language Processing.\n",
     "\n",
     "We will make an initial pass on the topic of learning from text: Natural Language Processing.\n",
+    "\n",
+    "The recent, exciting advances in NLP will be the topic of a subsequent module.\n",
     "\n",
     "\n",
     "**Attention**\n",
@@ -522,9 +521,12 @@
     "    - [NLP from github (Colab)](https://colab.research.google.com/github/kenperry-public/ML_Fall_2021/blob/master/Keras_examples_imdb_cnn.ipynb)\n",
     "    - [NLP from github (local machine)](Keras_examples_imdb_cnn.ipynb)\n",
     "\n",
+    "\n",
+    "**Generative ML: Variational Autoencoders**\n",
+    "- [Variational Autoencoders](Autoencoders_and_Generative_Models.ipynb)\n",
+    "\n",
     "**Interpretation**\n",
     "- [Interpretation: preview](Interpretation_preview.ipynb)\n",
-    "\n",
     "\n",
     "**Further reading**\n",
     "- Attention\n",
