--- a/Training_Neural_Networks_Scaling_and_Initialization.ipynb
+++ b/Training_Neural_Networks_Scaling_and_Initialization.ipynb
@@ -713,7 +713,7 @@
     "    </tr>\n",
     "    <tr>\n",
     "        <td>\n",
-    "            <img src=\"images/Autoencoder_vanilla.jpg\">\n",
+    "            <img src=\"images/Autoencoder_vanilla.png\">\n",
     "        </td>\n",
     "    </tr>\n",
     "</table>"
