--- a/NLP_BPE.ipynb
+++ b/NLP_BPE.ipynb
@@ -5,7 +5,7 @@
    "execution_count": 1,
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "notes"
     }
    },
    "outputs": [
