Lesson 12: VAE module added

--- a/Autoencoders_and_Generative_Models.ipynb
+++ b/Autoencoders_and_Generative_Models.ipynb
@@ -957,7 +957,7 @@
    },
    "source": [
     "Note that there are *many* reconstructions $\\tilde\\x^\\ip$ of $\\x^\\ip$\n",
-    "- depending on the sampled $\\tilde\\z^\\ip$ drawn from $p_\\theta(\\z | \\z)$"
+    "- depending on the sampled $\\tilde\\z^\\ip$ drawn from $p_\\theta(\\z | \\x)$"
    ]
   },
   {
