--- a/Attention_Lookup.ipynb
+++ b/Attention_Lookup.ipynb
@@ -295,7 +295,76 @@
    },
    "source": [
     "The mechanism we use to match Target and Source contexts is called *Context Sensitive Memory*\n",
-    "which we introduced in a previous [module](Neural_Programming.ipynb#Soft-Lookup)"
+    "which we introduced in a previous [module](Neural_Programming.ipynb#Soft-Lookup)\n",
+    "\n",
+    "To recap:\n",
+    "- Context Sensitive Memory $M$ is a set of key/value pairs\n",
+    "$$\n",
+    "M  = \\{ (k_{\\bar{\\tt}}, v_{\\bar{\\tt}} ) \\, | \\, 1 \\le \\bar{\\tt} \\le \\bar{T} \\}\n",
+    "$$\n",
+    "\n",
+    "- A lookup of query $\\querycsm$ into Memory $M$ returns\n",
+    "$$\n",
+    "\\text{lookup}(q, M) = \\sum_{ (k,v) \\in M} { \\alpha(q, k) * v }\n",
+    "$$\n",
+    "\n",
+    "    - where the weights $\\alpha(\\querycsm,k)$ are computed via a Softmax on the value $\\text{score}(q, k )$\n",
+    "$$\n",
+    "\\alpha(q, k) = \\frac{ \\exp(\\text{score}(q, k) )}{ \\sum_{k' \\in \\text{keys}(M) } { \\exp( \\text{score}(q, k' ) } }\n",
+    "$$\n",
+    "\n",
+    "    - The value $$\\text{score}(q, k )$$ is a measure of the similarity between query $\\querycsm$ and key $k$.\n",
+    "    - $\\alpha(q, k) $  is sometimes referred to as a *normalized score*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Attention lookup: in practice\n",
+    "\n",
+    "For simplicity we described attention as a soft-match of queries against keys, producing weighted values.\n",
+    "\n",
+    "In practice: we transform each of the queries, keys and values \n",
+    "- $q \\mapsto q W_Q$\n",
+    "- $k \\mapsto q W_K$\n",
+    "- $v \\mapsto q W_V$\n",
+    "\n",
+    "by mapping through *embedding matrices* $W_Q, W_K, W_V$ which are **learned** parameters of the model.\n",
+    "\n",
+    "This generalization will find a \"more useful\" representation if it exists\n",
+    "- if there is no useful mapping then presumably we learn the identity matrix\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "We can perform the Context Sensitive Memory lookup *in parallel* across all elements of a sequence $\\x$\n",
+    "(written as matrix $\\X$) via matrix multiplication:\n",
+    "\n",
+    "Using $\\X$ as the queries, keys and values:\n",
+    "- mapping all inputs $x \\in \\X$:\n",
+    "$$\n",
+    "\\begin{array}[lll]\\\\\n",
+    "Q = \\X W_Q \\\\\n",
+    "K = \\X W_K \\\\\n",
+    "V = \\X W_V \\\\\n",
+    "\\end{array}\n",
+    "$$\n",
+    "\n",
+    "- Computing scores of each query against each key\n",
+    "$$\n",
+    "Q K^T\n",
+    "$$"
    ]
   },
   {
@@ -485,7 +554,7 @@
     "width": "370.594px"
    },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
