--- a/Index.ipynb
+++ b/Index.ipynb
@@ -522,12 +522,13 @@
     "    - [NLP from github (local machine)](Keras_examples_imdb_cnn.ipynb)\n",
     "\n",
     "\n",
-    "**Generative ML: Variational Autoencoders**\n",
-    "- [Variational Autoencoders](Autoencoders_and_Generative_Models.ipynb)\n",
-    "\n",
-    "**Interpretation**\n",
-    "- [Interpretation: preview](Interpretation_preview.ipynb)\n",
-    "\n",
+    "**Deeper dives**\n",
+    "- Transformer\n",
+    "    - [Keras example: pre-defined Attention layers](https://keras.io/examples/nlp/text_classification_with_transformer/)\n",
+    "        - [notebook](https://colab.research.google.com/github/keras-team/keras-io/blob/master/examples/nlp/ipynb/text_classification_with_transformer.ipynb)\n",
+    "    - [TensorFlow tutorial: implements Attention, positional encoding](https://www.tensorflow.org/text/tutorials/transformer)\n",
+    "       - [notebook](https://colab.research.google.com/github/tensorflow/text/blob/master/docs/tutorials/transformer.ipynb)\n",
+    "    \n",
     "**Further reading**\n",
     "- Attention\n",
     "    - [Neural Machine Translation by Jointly Learning To Align and Translate](https://arxiv.org/pdf/1409.0473.pdf)\n",
@@ -542,7 +543,20 @@
     }
    },
    "source": [
-    "# Week 6 NLP today\n",
+    "# Week 6 NLP today; Advanced Keras\n",
+    "\n",
+    "**Plan**\n",
+    "\n",
+    "We explore some recent advances that have greatly increased the power of NLP.\n",
+    "\n",
+    "The Transformer architecture is a key contributor.\n",
+    "\n",
+    "\n",
+    "We revisit Autoencoders in depth, with a particular emphasis on using them for Generative Machine Learning.\n",
+    "\n",
+    "Although we have spent the semester with the simpler Sequential model of Keras, it's time to give a peek at the Functional model.  \n",
+    "\n",
+    "We also illustrate some more advanced Keras coding methods.\n",
     "\n",
     "**Evolution of Word representations**\n",
     "- [How to represent a word: syntax](NLP_BPE.ipynb)\n",
@@ -552,7 +566,35 @@
     "- [Recent advances](NLP_Recent.ipynb)\n",
     "\n",
     "**Learning to learn**\n",
-    "- [More than NLP: The GPT family](NLP_GPT.ipynb)"
+    "- [More than NLP: The GPT family](NLP_GPT.ipynb)\n",
+    "\n",
+    "**Generative ML: Variational Autoencoders**\n",
+    "- [Variational Autoencoders](Autoencoders_and_Generative_Models.ipynb)\n",
+    "    <!--- #include (Autoencoder_example.ipynb) --->\n",
+    "    - [Autoencoder from github](https://colab.research.google.com/github/kenperry-public/ML_Fall_2021/blob/master/Autoencoder_example.ipynb) (**Colab**)\n",
+    "    - [Autoencoder from github](Autoencoder_example.ipynb) (**local machine**)\n",
+    "\n",
+    "\n",
+    "**Advanced Keras**\n",
+    "- Variational Autoencoder\n",
+    "    - Functional model\n",
+    "    - Custom layers\n",
+    "    - Custom training loop\n",
+    "        - [Keras VAE: home](https://keras.io/examples/generative/vae/)\n",
+    "        - [Keras VAE: notebook](https://colab.research.google.com/github/keras-team/keras-io/blob/master/examples/generative/ipynb/vae.ipynb#scrollTo=DEU05Oe0vJrY)\n",
+    "- Transformer\n",
+    "    - Functional model\n",
+    "    - Layer Norm\n",
+    "    - Skip connections\n",
+    "        - [Transformer](https://colab.research.google.com/github/keras-team/keras-io/blob/master/examples/nlp/ipynb/neural_machine_translation_with_transformer.ipynb)\n",
+    "        - [Full architecture diagram (compare with code)](Transformer.ipynb#Full-Encoder-Decoder-Transformer-architecture)\n",
+    "\n",
+    "\n",
+    "**Interpretation**\n",
+    "- [Interpretation: preview](Interpretation_preview.ipynb)\n",
+    "\n",
+    "**Further reading**\n",
+    "- [Tutorial on Variational Autoencoders](https://arxiv.org/pdf/1606.05908.pdf)"
    ]
   },
   {
