--- a/Transformer.ipynb
+++ b/Transformer.ipynb
@@ -435,6 +435,26 @@
     }
    },
    "source": [
+    "## Full Encoder-Decoder Transformer architecture\n",
+    "\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <th><center>Transformer (Encoder/Decoder)</center></th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td><img src=\"images/Attention_is_all_u_need_Transformer.png\" width=60%></td>\n",
+    "    </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "# Advantages of a Transformer compared to an RNN\n",
     "- Time: All steps computed in parallel\n",
     "    - $O(1)$ sequential steps versus $O(T)$\n",
@@ -607,6 +627,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Some other advantages\n",
+    "\n",
+    "- Can learn long-range dependencies\n",
+    "    - Gradients within a layer don't flow backwards: always a single step\n",
+    "        - Can't vanish or explode\n",
+    "    - The output $\\y^{[\\ll]}_\\tp$ of layer $\\ll$ (for stacked Transformer layers) is a function of **all** inputs\n",
+    "    $$\n",
+    "    \\y^{[\\ll-1]}_{(\\tt')} \\text{ for } 1 \\le \\tt' \\le T\n",
+    "    $$\n",
+    "        - so can directly access a distant input\n",
+    "        - not diminished by passing through multiple intermediate time steps\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Some drawbacks\n",
+    "\n",
+    "- The output $\\y^{[\\ll]}_\\tp$ of layer $\\ll$ (for stacked Transformer layers) is a function of **all** inputs, **always**\n",
+    "    - Perhaps less efficient\n",
+    "- Unless you add positional encoding, you lose ordering relationships between inputs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -648,7 +704,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "369.594px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   }
