--- a/Interpretation_of_DL_Simple.ipynb
+++ b/Interpretation_of_DL_Simple.ipynb
@@ -550,7 +550,7 @@
     }
    },
    "source": [
-    "By sorting examples on $\\summaxact^\\ip_{\\llp,k}$\n",
+    "By sorting examples (i.e., varying example index $i$) on $\\summaxact^\\ip_{\\llp,k}$\n",
     "- We identify a cluster of examples\n",
     "- That are most identified with the feature\n",
     "\n",
